--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -1,7 +1,7 @@
 {% block sw_media_modal_folder_settings %}
     <sw-modal class="sw-media-modal-folder-settings"
               :class="modalClass"
-              @closeModal="closeModal"
+              @modal-close="closeModal"
               :title="folder.name"
               variant="large">
 
