--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -2,7 +2,7 @@
     <sw-modal class="sw-media-modal-replace"
               size="420px"
               :title="$tc('global.sw-media-modal-replace.titleModal')"
-              @closeModal="emitCloseReplaceModal">
+              @modal-close="emitCloseReplaceModal">
 
         <sw-upload-store-listener
             :uploadTag="itemToReplace.id"
