--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -28,7 +28,7 @@
                     <sw-media-url-form
                         v-if="showUrlInput"
                         variant="modal"
-                        @closeModal="closeUrlModal"
+                        @modal-close="closeUrlModal"
                         @media-url-form-submit="onUrlUpload">
                     </sw-media-url-form>
                 {% endblock %}
