--- a/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
@@ -2,7 +2,7 @@
     <div class="sw-language-switch">
         {% block sw_language_switch_modal %}
             <sw-modal v-if="showUnsavedChangesModal"
-                      @closeModal="onCloseChangesModal"
+                      @modal-close="onCloseChangesModal"
                       :title="$tc('sw-language-switch.titleModalUnsavedChanges')"
                       variant="small">
                 {% block sw_language_switch_message %}
