--- a/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/config/sw-cms-el-config-image.html.twig
@@ -34,7 +34,7 @@
                 :initialFolderId="cmsPageState.defaultMediaFolderId"
                 @media-upload-remove-image="onImageRemove"
                 @media-modal-selection-change="onSelectionChanges"
-                @closeModal="onCloseModal">
+                @modal-close="onCloseModal">
             </sw-media-modal>
         {% endblock %}
     </div>
