--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-delivery/sw-product-modal-delivery.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-delivery/sw-product-modal-delivery.html.twig
@@ -1,6 +1,6 @@
 {% block sw_product_modal_delivery %}
     <sw-modal :title="$tc('sw-product.variations.deliveryModal.modalHeadline')"
-              @closeModal="$emit('modal-close')"
+              @modal-close="$emit('modal-close')"
               class="sw-product-modal-delivery"
               :isLoading="isLoading">
 
