--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
@@ -61,7 +61,7 @@
 
         {% block sw_product_variants_configurator_restrictions_modal %}
             <sw-modal title="Aussschluss hinzufügen"
-                      @closeModal="cancelAddRestriction"
+                      @modal-close="cancelAddRestriction"
                       v-if="restrictionModalIsOpen"
                       class="sw-product-variants-configurator-restrictions__modal">
 
