--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
@@ -1,7 +1,7 @@
 {% block sw_sales_channel_modal %}
     <sw-modal class="sw-sales-channel-modal"
               :isLoading="isLoading"
-              @closeModal="onCloseModal">
+              @modal-close="onCloseModal">
 
         {% block sw_sales_channel_modal_header %}
             <template slot="modal-header">
