--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-dissolve/sw-media-modal-folder-dissolve.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-dissolve/sw-media-modal-folder-dissolve.html.twig
@@ -1,7 +1,7 @@
 {% block sw_media_modal_folder_dissolve %}
     <sw-modal variant="small"
               class="sw-media-modal-folder-dissolve"
-              @closeModal="closeDissolveModal"
+              @modal-close="closeDissolveModal"
               :title="$tc('global.sw-media-modal-folder-dissolve.titleModal')">
 
         {% block sw_media_modal_folder_dissolve_body %}
