--- a/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
@@ -1,5 +1,5 @@
 {% block sw_cms_layout_modal %}
-    <sw-modal class="sw-cms-layout-modal" @closeModal="closeModal" :title="$tc('sw-cms.components.cmsLayoutModal.modalTitle')">
+    <sw-modal class="sw-cms-layout-modal" @modal-close="closeModal" :title="$tc('sw-cms.components.cmsLayoutModal.modalTitle')">
 
         {% block sw_cms_layout_modal_header %}
             <div class="sw-cms-layout-modal__header">
