--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -122,7 +122,7 @@
                                 <template slot="action-modals" slot-scope="{ item }">
                                     {% block sw_customer_list_delete_modal %}
                                         <sw-modal v-if="showDeleteModal === item.id"
-                                                  @closeModal="onCloseDeleteModal"
+                                                  @modal-close="onCloseDeleteModal"
                                                   :title="$tc('sw-customer.list.modalTitleDelete')"
                                                   variant="small">
                                             {% block sw_customer_list_delete_modal_confirm_delete_text %}
