--- a/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
+++ b/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
@@ -33,7 +33,7 @@
                                           class="sw-integration-list__detail"
                                           :isLoading="isModalLoading"
                                           :title="showSecretAccessKey ? $tc('sw-integration.detail.detailModalTitle') : $tc('sw-integration.detail.detailModalTitleEdit') + ' ' + currentIntegration.label"
-                                          @closeModal="onCloseDetailModal">
+                                          @modal-close="onCloseDetailModal">
                                     {% block sw_integration_list_detail_modal_inner %}
 
                                         {% block sw_integration_list_detail_modal_inner_field_label %}
@@ -186,7 +186,7 @@
                                                 {% block sw_integration_list_grid_inner_slot_delete_modal %}
                                                     <sw-modal v-if="showDeleteModal === item.id"
                                                               :title="$tc('sw-integration.detail.deleteModalTitle')"
-                                                              @closeModal="onCloseDeleteModal">
+                                                              @modal-close="onCloseDeleteModal">
                                                         {% block sw_integration_list_grid_inner_slot_delete_modal_confirmtext %}
                                                             <p>
                                                                 {{ $tc('sw-integration.detail.confirmDelete') }}
