--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -132,7 +132,7 @@
 
                                     {% block sw_manufacturer_list_delete_modal %}
                                         <sw-modal v-if="showDeleteModal === item.id"
-                                                  @closeModal="onCloseDeleteModal"
+                                                  @modal-close="onCloseDeleteModal"
                                                   :title="$tc('sw-manufacturer.list.modalTitleDelete')"
                                                   variant="small">
                                             {% block sw_manufacturer_list_delete_modal_confirm_delete_text %}
