--- a/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-address-modal/sw-order-address-modal.html.twig
@@ -1,6 +1,6 @@
 {% block sw_order_address_modal %}
     <sw-modal :title="$tc('sw-order.addressSelection.modalTitleEditAddress')"
-              @closeModal="onClose">
+              @modal-close="onClose">
         {% block sw_order_address_modal_content %}
             <sw-tabs class="sw-order-address-modal" defaultItem="edit" @newActiveItem="onNewActiveItem">
                 <template slot-scope="{ active }">
