--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-list/sw-product-stream-list.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-list/sw-product-stream-list.twig
@@ -157,7 +157,7 @@
 
                                     {% block sw_product_stream_list_delete_modal %}
                                         <sw-modal v-if="showDeleteModal === item.id"
-                                                  @closeModal="onCloseDeleteModal"
+                                                  @modal-close="onCloseDeleteModal"
                                                   :title="$tc('sw-product-stream.list.modalTitleDelete')"
                                                   variant="small">
                                             {% block sw_product_stream_list_delete_modal_confirm_delete_text %}
