--- a/Resources/administration/src/module/sw-promotion/page/sw-promotion-list/sw-promotion-list.html.twig
+++ b/Resources/administration/src/module/sw-promotion/page/sw-promotion-list/sw-promotion-list.html.twig
@@ -111,7 +111,7 @@
 
                                         {% block sw_promotion_list_delete_modal %}
                                             <sw-modal v-if="showDeleteModal === item.id"
-                                                      @closeModal="onCloseDeleteModal"
+                                                      @modal-close="onCloseDeleteModal"
                                                       :title="$tc('sw-promotion.list.modalTitleDelete')"
                                                       variant="small">
                                                 {% block sw_promotion_list_delete_modal_confirm_delete_text %}
