--- a/Resources/administration/src/module/sw-settings-attribute/page/sw-settings-attribute-set-list/sw-settings-attribute-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-attribute/page/sw-settings-attribute-set-list/sw-settings-attribute-set-list.html.twig
@@ -83,7 +83,7 @@
 
                                         {% block sw_settings_attribute_set_list_grid_delete_modal %}
                                             <sw-modal v-if="showDeleteModal === item.id"
-                                                      @closeModal="onCloseDeleteModal"
+                                                      @modal-close="onCloseDeleteModal"
                                                       :title="$tc('sw-settings-attribute.set.list.titleModalDelete')"
                                                       variant="small">
                                                 {% block sw_settings_attribute_set_list_grid_delete_modal_text %}
