--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -165,7 +165,7 @@
 
                                             {% block sw_settings_country_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-country.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_country_list_delete_modal_confirm_text %}
