--- a/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
@@ -174,7 +174,7 @@
 
                                             {% block sw_settings_currency_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-currency.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_currency_list_delete_modal_confirm_text %}
