--- a/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-list/sw-settings-customer-group-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-list/sw-settings-customer-group-list.html.twig
@@ -140,7 +140,7 @@
                                             {% block sw_settings_customer_group_list_delete_modal %}
                                                 <template slot="action-modals" slot-scope="{ item }">
                                                     <sw-modal v-if="showDeleteModal === item.id"
-                                                              @closeModal="onCloseDeleteModal"
+                                                              @modal-close="onCloseDeleteModal"
                                                               :title="$tc('sw-settings-customer-group.general.mainMenuItemGeneral')"
                                                               variant="small">
                                                         {% block sw_settings_customer_group_list_delete_modal_confirm_delete_text %}
