--- a/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-list/sw-settings-document-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-document/page/sw-settings-document-list/sw-settings-document-list.html.twig
@@ -125,7 +125,7 @@
 
                                             {% block sw_settings_document_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-document.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_document_list_delete_modal_confirm_text %}
