--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
@@ -150,7 +150,7 @@
 
                                             {% block sw_settings_language_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-language.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_language_list_delete_modal_confirm_text %}
