--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -131,7 +131,7 @@
 
                                             {% block sw_settings_payment_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-payment.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_payment_list_delete_modal_confirm_text %}
