--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -181,7 +181,7 @@
 
                                             {% block sw_settings_rule_list_delete_modal %}
                                                 <sw-modal v-if="showDeleteModal === item.id"
-                                                          @closeModal="onCloseDeleteModal"
+                                                          @modal-close="onCloseDeleteModal"
                                                           :title="$tc('sw-settings-rule.list.modalTitleDelete')"
                                                           variant="small">
                                                     {% block sw_settings_rule_list_delete_modal_confirm_text %}
@@ -260,7 +260,7 @@
 
                         {% block sw_settings_rule_list_sidebar_delete_modal %}
                         <sw-modal v-if="showDeleteModal === true"
-                                  @closeModal="onCloseDeleteModal"
+                                  @modal-close="onCloseDeleteModal"
                                   :title="$tc('sw-settings-rule.list.modalTitleBulkDelete')"
                                   variant="small">
 
