--- a/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-list/sw-settings-salutation-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-salutation/page/sw-settings-salutation-list/sw-settings-salutation-list.html.twig
@@ -158,7 +158,7 @@
                                             {% block sw_settings_salutation_list_delete_modal %}
                                                 <template slot="action-modals" slot-scope="{ item }">
                                                     <sw-modal v-if="showDeleteModal === item.id"
-                                                              @closeModal="onCloseDeleteModal"
+                                                              @modal-close="onCloseDeleteModal"
                                                               :title="$tc('sw-settings-salutation.general.mainMenuItemGeneral')"
                                                               variant="small">
                                                         {% block sw_settings_salutation_list_delete_modal_confirm_delete_text %}
