--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -156,20 +156,20 @@
                                  :priceRule="priceRule"
                                  :priceRuleStore="priceRuleStore"
                                  @save="onSavePriceRule"
-                                 @closeModal="onClosePriceRuleModal">
+                                 @modal-close="onClosePriceRuleModal">
             </sw-price-rule-modal>
         {% endblock %}
 
         {% block sw_settings_shipping_price_matrix_rule_modal %}
             <sw-rule-modal v-if="showRuleModal"
                            @save="onSaveRule"
-                           @closeModal="onCloseRuleModal">
+                           @modal-close="onCloseRuleModal">
             </sw-rule-modal>
         {% endblock %}
 
         {% block sw_settings_shipping_price_matrix_delete_modal %}
             <sw-modal v-if="showDeleteModal"
-                      @closeModal="onCloseDeleteModal"
+                      @modal-close="onCloseDeleteModal"
                       :title="$tc('sw-settings-shipping.priceMatrix.modalTitleDelete')"
                       variant="small">
                 {% block sw_settings_shipping_price_matrix_delete_modal_confirm_delete_text %}
