--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-list/sw-settings-shipping-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-list/sw-settings-shipping-list.html.twig
@@ -87,7 +87,7 @@
                                 <template slot="action-modals" slot-scope="{ item }">
                                     {% block sw_settings_shipping_list_delete_modal %}
                                     <sw-modal v-if="showDeleteModal === item.id"
-                                              @closeModal="onCloseDeleteModal"
+                                              @modal-close="onCloseDeleteModal"
                                               :title="$tc('sw-settings-shipping.list.modalTitleDelete')"
                                               variant="small">
                                         {% block sw_settings_shipping_list_delete_modal_confirm_delete_text %}
