--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-set-list/sw-settings-snippet-set-list.html.twig
@@ -214,7 +214,7 @@
 
                                         {% block sw_settings_snippet_set_list_columns_delete_modal %}
                                             <sw-modal v-if="showDeleteModal === item.id"
-                                                      @closeModal="onCloseDeleteModal"
+                                                      @modal-close="onCloseDeleteModal"
                                                       :title="$tc('sw-settings-snippet.setList.modalTitleDelete')"
                                                       variant="small">
                                                 {% block sw_settings_snippet_set_list_delete_modal_confirm_delete_text %}
@@ -246,7 +246,7 @@
 
                                         {% block sw_settings_snippet_set_list_columns_clone_modal %}
                                             <sw-modal v-if="showCloneModal === item.id"
-                                                      @closeModal="closeCloneModal"
+                                                      @modal-close="closeCloneModal"
                                                       :title="$tc('sw-settings-snippet.setList.modalTitleClone')"
                                                       variant="small">
                                                 {% block sw_settings_snippet_set_list_clone_modal_confirm_delete_text %}
