--- a/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-list/sw-settings-user-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-user/page/sw-settings-user-list/sw-settings-user-list.html.twig
@@ -80,7 +80,7 @@
                         <template slot="action-modals" slot-scope="{ item }">
                             {% block sw_settings_user_list_delete_modal %}
                                 <sw-modal v-if="getItemToDelete(item)"
-                                          @closeModal="onCloseDeleteModal"
+                                          @modal-close="onCloseDeleteModal"
                                           :title="$tc('sw-settings-user.user-grid.titleModalDelete')"
                                           variant="small">
                                     {% block sw_settings_user_list_delete_modal_confirm_delete_text %}
