NEXT-2956 - Fix flyout for long menu titles and e2e tests

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.scss
@@ -229,7 +229,7 @@ $sw-admin-menu-shop-status-ok: $color-emerald;
 
     .sw-admin-menu__flyout {
         background-color: $sw-admin-menu-color-active;
-        width: $sw-admin-menu-width-flyout;
+        min-width: $sw-admin-menu-width-flyout;
         z-index: $sw-admin-menu-z-index-flyout;
         position: absolute;
         top: 0;
@@ -243,6 +243,7 @@ $sw-admin-menu-shop-status-ok: $color-emerald;
                 height: 48px;
                 line-height: 48px;
                 font-weight: normal;
+                text-overflow: ellipsis;
 
                 &:hover {
                     background-color: $sw-admin-menu-color-hover;
